# pod2

./: .gitignore  Cargo.toml  README.md  build.rs  rust-analyzer.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  clippy.yml  mainpod-circuit-info-publish.yml  mdbook-check.yml  mdbook-publish.yml  mdbook.yml  rustfmt.yml  tests.yml  typos.toml  typos.yml
.github/workflows/scripts/: mainpod-circuit-info-table.sh  mainpod-circuit-info.sh
book/: book.toml
book/src/: SUMMARY.md  anchoredkeys.md  architecture.md  backendtypes.md  custom.md  custom1.md  custom1b.md  custom2.md  customexample.md  customhash.md  custompred.md  deductions.md  examples.md  front_and_back.md  introductionpods.md  mainpod.md  merklestatements.md  merkletree.md  operations.md  podtypes.md  signature.md  signedpod.md  simpleexample.md  statements.md  values.md
examples/: main_pod_points.rs  signed_dict.rs  signed_pod.rs
src/: SUMMARY.md  backend.rs  backends.rs  constants.rs  examples.md  examples.rs  frontend.rs  lib.rs  merkletree.rs  middleware.rs  mockpod.md  util.rs
src/backends/: counter.rs  mock_main.rs  mock_signed.rs  mod.rs
src/backends/mock_main/: mod.rs  operation.rs  statement.rs
src/backends/plonky2/: basetypes.rs  common.rs  emptypod.rs  error.rs  main.rs  mainpod.rs  mock_signed.rs  mod.rs  serialization.rs  signedpod.rs  signer.rs
src/backends/plonky2/circuits/: common.rs  hash.rs  mainpod.rs  metrics.rs  mod.rs  mux_table.rs  signedpod.rs  utils.rs
src/backends/plonky2/mainpod/: mod.rs  operation.rs  statement.rs
src/backends/plonky2/mock/: emptypod.rs  mainpod.rs  mod.rs  signedpod.rs
src/backends/plonky2/mock/mainpod/: mod.rs  operation.rs  statement.rs
src/backends/plonky2/mock_main/: mod.rs  operation.rs  statement.rs
src/backends/plonky2/primitives/: merkletree.rs  merkletree_circuit.rs  mod.rs  signature.rs  signature_circuit.rs
src/backends/plonky2/primitives/ec/: bits.rs  curve.rs  field.rs  mod.rs  schnorr.rs
src/backends/plonky2/primitives/ec/gates/: curve.rs  field.rs  generic.rs  mod.rs
src/backends/plonky2/primitives/merkletree/: circuit.rs  error.rs  mod.rs
src/backends/plonky2/primitives/signature/: circuit.rs  mod.rs
src/backends/plonky2/recursion/: circuit.rs  mod.rs
src/cache/: disk.rs  mem.rs  mod.rs
src/examples/: custom.rs  mod.rs
src/frontend/: containers.rs  custom.rs  error.rs  mod.rs  operation.rs  pod_request.rs  predicate.rs  serialization.rs  statement.rs
src/frontend/multi_pod/: cost.rs  deps.rs  mod.rs  solver.rs
src/lang/: error.rs  frontend_ast.rs  frontend_ast_batch.rs  frontend_ast_lower.rs  frontend_ast_split.rs  frontend_ast_validate.rs  grammar.pest  mod.rs  parser.rs  pretty_print.rs  processor.rs
src/middleware/: basetypes.rs  containers.rs  custom.rs  error.rs  mod.rs  operation.rs  pod_deserialization.rs  serialization.rs  statement.rs
src/primitives/: merkletree.rs
